--- a/index.html
+++ b/index.html
@@ -3,25 +3,82 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Link the css file-->
     <link rel="stylesheet" href="css/style.css">
+    <!--Import Google Icon Font-->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+    </style>
+    <!--Import bootstrap.css-->
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!--Import Font Awesome-->
     <script src="https://kit.fontawesome.com/fe2a32b0d9.js" crossorigin="anonymous"></script>
     <title>The Hide Out Portugal</title>
 
 </head>
 
 <body>
-    <nav id="nav">
-        <ul>
-            <li><a href="#"><img src="" height="96" /></a></li>
-            <li><a href="#">The Silver Coast</a></li>
-            <li><a href="#">The HideOut</a></li>
-            <li><a href="#">Places to Visit</a></li>
-        </ul>
-        <header>
-            <h1>Hello Leila!</h1>
-            <i class="fas fa-sun fa-4x">Temperature</i>
-        </header>
+
+    <header>
+        <div class="navbar-fixed">
+            <nav id="nav">
+                <div class="nav-wrapper">
+                    <a href="#!" class="brand-logo">Logo</a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="#">Places to Visit</a></li>
+                        <li><a href="#">The Silver Coast</a></li>
+                        <li><a href="#">The HideOut</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <section>
+        <div class="container-fluid" id="container-pictures">
+            <div class="row">
+                <div class="col- col-md- col-sm-" id="img">
+                    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./images/pexels-elle-hughes-1549180.jpg" class="d-block w-100"
+                                    alt="surf class">
+                                <div class="container carousel-caption d-none d-md-block">
+                                    <p id="p-text">Enjoy your place in the sun</p>
+                                    <h2 id="text">The Hide Out Portugal</h2>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/peniche.jpg" class="d-block w-100" alt="penich beach">
+                                <div class="container carousel-caption d-none d-md-block">
+                                    <p id="p-text">Enjoy your place in the sun</p>
+                                    <h2 id="text">The Hide Out Portugal</h2>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/salir_do_porto_2.jpg" class="d-block w-100" alt="Salir do Porto">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <p id="p-text">Enjoy your place in the sun</p>
+                                    <h2 id="text">The Hide Out Portugal</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <script src="./js/main.js"></script>
+    <!--bootstrap - Compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
