--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </nav>
         </div>
     </header>
+
     <section>
         <div class="container-fluid" id="container-pictures">
             <div class="row">
@@ -44,25 +45,26 @@
                     <div id="carousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
+                                <div class="carousel-text">
+                                    <p class="text-center p-text">Enjoy your place in the sun</p>
+                                    <h1 class="text-center text">The Hide Out Portugal</h1>
+                                </div>
                                 <img src="./images/pexels-elle-hughes-1549180.jpg" class="d-block w-100"
                                     alt="surf class">
-                                <div class="container carousel-caption d-none d-md-block">
-                                    <p id="p-text">Enjoy your place in the sun</p>
-                                    <h2 id="text">The Hide Out Portugal</h2>
-                                </div>
+
                             </div>
                             <div class="carousel-item">
                                 <img src="./images/peniche.jpg" class="d-block w-100" alt="penich beach">
-                                <div class="container carousel-caption d-none d-md-block">
+                                <div class="carousel-text">
                                     <p id="p-text">Enjoy your place in the sun</p>
-                                    <h2 id="text">The Hide Out Portugal</h2>
+                                    <h1 id="text">The Hide Out Portugal</h1>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./images/salir_do_porto_2.jpg" class="d-block w-100" alt="Salir do Porto">
-                                <div class="carousel-caption d-none d-md-block">
+                                <img src="./images/pool4.jpg" class="d-block w-100" alt="pool">
+                                <div class="carousel-text">
                                     <p id="p-text">Enjoy your place in the sun</p>
-                                    <h2 id="text">The Hide Out Portugal</h2>
+                                    <h1 id="text">The Hide Out Portugal</h1>
                                 </div>
                             </div>
                         </div>
@@ -72,7 +74,7 @@
             </div>
         </div>
     </section>
-
+    -->
 
     <script src="./js/main.js"></script>
     <!--bootstrap - Compiled and minified JavaScript -->
