--- a/index.html
+++ b/index.html
@@ -3,25 +3,130 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Link the css file-->
     <link rel="stylesheet" href="css/style.css">
+    <!--Import Google Icon Font-->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+    </style>
+    <!--Import bootstrap.css-->
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!--Import Font Awesome-->
     <script src="https://kit.fontawesome.com/fe2a32b0d9.js" crossorigin="anonymous"></script>
     <title>The Hide Out Portugal</title>
 
 </head>
 
 <body>
-    <nav id="nav">
-        <ul>
-            <li><a href="#"><img src="" height="96" /></a></li>
-            <li><a href="#">The Silver Coast</a></li>
-            <li><a href="#">The HideOut</a></li>
-            <li><a href="#">Places to Visit</a></li>
-        </ul>
-        <header>
-            <h1>Hello Leila!</h1>
-            <i class="fas fa-sun fa-4x">Temperature</i>
-        </header>
+
+    <header>
+        <nav class="navbar sticky-top" id="nav">
+            <div class="container-fluid">
+                <a class="navbar-brand text-center" href="#">Sticky top</a>
+                <ul class="right hide-on-med-and-down text-center">
+
+
+                    <li><a href="#">Places to Visit</a></li>
+                    <li><a href="#">The Silver Coast</a></li>
+                    <li><a href="#">The HideOut</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+
+    <div class="container-fluid" id="container-pictures">
+        <div class="row">
+            <div class="col- col-md- col-sm-" id="img">
+                <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="carousel-text">
+                                <p class="text-center subtext">Enjoy your place in the sun</p>
+                                <h1 class="text-center text">The Hideout Portugal</h1>
+                            </div>
+                            <img src="./images/pexels-elle-hughes-1549180.jpg" class="d-block w-100 carousel-pictures"
+                                alt="surf class">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/apartment1.jpg" class="d-block w-100 carousel-pictures"
+                                alt="penich beach">
+                            <div class="carousel-text">
+                                <p class="text-center subtext">Enjoy your place in the sun</p>
+                                <h1 class="text-center text">The Hideout Portugal</h1>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/aryane-diaz-wAnTkBqHG30-unsplash.jpg"
+                                class="d-block w-100 carousel-pictures" alt="penich beach">
+                            <div class="carousel-text">
+                                <p class="text-center subtext">Enjoy your place in the sun</p>
+                                <h1 class="text-center text">The Hideout Portugal</h1>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/pool4.jpg" class="d-block w-100 carousel-pictures" alt="pool">
+                            <div class="carousel-text">
+                                <p class="text-center subtext">Enjoy your place in the sun</p>
+                                <h1 class="text-center text">The Hideout Portugal</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Section 2-->
+    <div class="container-fluid section-two">
+        <div class="row">
+            <div class="col- col-md- col-sm- content-two">
+                <p class="text-center subtext">ONE-OF-A-KIND VACATION RENTAL</p>
+                <h2 class="text-center">Booking with us is easy</h2>
+            </div>
+        </div>
+    </div>
+    <!-- Portugal Pictures container--  -->
+
+
+
+    <div class="container-fluid section-three">
+        <div class="row pictures d-flex flex-row">
+            <div class="col- col-md- col-sm- col-lg- photo-container">
+
+                <h2 class="text-left">Portugal is waiting for you</h2>
+
+                <img src="./images/thumbnail.jpg" class="photos" alt="penich beach">
+
+
+                <img src="./images/christoffer-engstrom-eVb3HwIVnw0-unsplash.jpg" class="photos" alt="penich beach"
+                    class="photos">
+
+                <img src="./images/martin-brechtl-kooSLtnWRVw-unsplash.jpg" class="photos" alt="penich beach">
+                <img src="./images/peniche.jpg" class="photos" alt="penich beach">
+
+                <img src="./images/photo-1503075131240-fe4b3a7fa473.jpeg" class="photos" alt="penich beach">
+            </div>
+        </div>
+    </div>
+
+
+
+    <script src="./js/main.js"></script>
+    <!--bootstrap - Compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="/path/to/jquery.min.js"></script>
+    <script src="/path/to/bootstrap.min.js"></script>
+
+
+    <script src="carousel.js"></script>
 </body>
 
 </html>
