--- a/index.html
+++ b/index.html
@@ -28,16 +28,12 @@
             <div class="container-fluid">
                 <a class="navbar-brand text-center" href="#">Sticky top</a>
                 <ul class="right hide-on-med-and-down text-center">
-
-
-                    <li><a href="#">Places to Visit</a></li>
                     <li><a href="#">The Silver Coast</a></li>
                     <li><a href="#">The HideOut</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-
 
     <div class="container-fluid" id="container-pictures">
         <div class="row">
@@ -81,28 +77,45 @@
         </div>
     </div>
 
-    <!--Section 2-->
-    <div class="container-fluid section-two">
-        <div class="row">
-            <div class="col- col-md- col-sm- content-two">
+    <!--About Session-->
+    <div class="container-fluid about-section">
+        <div class="row about">
+            <div class="col-sm-6">
+                <h3 class="about-title">The HideOut Portugal</h3>
+            </div>
+            <div class="col-sm-6 text-left">
+                <p>Welcome to The Hideout Portugal, a place designed for you and your family!</p>
+                <p>The Hideout Portugal is situated one hour north of Lisbon on the Costa de Prata (Silvercoast) near
+                    Sao Martinho do Porto and within walking distance to its unique bay.</p>
+                <p>São Martinho do Porto, a natural shell shaped bay,
+                    unique in Portugal, is the ideal place for a quiet holiday with access to sport activities in
+                    sea, land or air.</p>
+                <p>Our family will have the pleasure to welcome you and your family in this beautiful and sunny
+                    accomodation.</p>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid booking-section">
+        <div class="row  d-flex justify-content-center">
+            <div class="col- col-md- col-sm- ">
                 <p class="text-center subtext">ONE-OF-A-KIND VACATION RENTAL</p>
                 <h2 class="text-center">Booking with us is easy</h2>
+            </div>
+            <div class="col-sm-6 button">
+                <a class="btn btn-primary" href="#" role="button">Find Out More</a>
             </div>
         </div>
     </div>
     <!-- Portugal Pictures container--  -->
-
-
-
-    <div class="container-fluid section-three">
+    <div class="container section-three">
         <div class="row pictures d-flex flex-row">
             <div class="col- col-sm- photo-container">
 
-                <h2 class="text-center title-img">Portugal is waiting for you</h2>
+                <h2 class="text-left title-img">Portugal is waiting for you</h2>
 
                 <img class="photos hover-scale" src="./images/thumbnail.jpg" class="photos" alt="penich beach"
                     alt="penich beach">
-
 
                 <img class="photos hover-scale" src="./images/christoffer-engstrom-eVb3HwIVnw0-unsplash.jpg"
                     alt="penich beach">
@@ -113,11 +126,20 @@
                 <img class="photos hover-scale" src="./images/peniche.jpg" alt="penich beach">
 
                 <img class="photos hover-scale" src="./images/photo-1503075131240-fe4b3a7fa473.jpeg" alt="penich beach">
-
             </div>
         </div>
     </div>
-
+    <!---Footer---->
+    <div class="container-fluid footer">
+        <div class="row pictures d-flex flex-row">
+            <div class="col- col-sm- photo-container">
+                <div class="text-left footer-content">
+                    <h2>The Hideout Portugal</h2>
+                    <h3>Get in touch</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="./js/main.js"></script>
     <!--bootstrap - Compiled and minified JavaScript -->
