--- a/index.html
+++ b/index.html
@@ -49,16 +49,9 @@
                                 alt="surf class">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/apartment1.jpg" class="d-block w-100 carousel-pictures"
+                            <img src="./images/thumbnail 3.jpg" class="d-block w-100 carousel-pictures"
                                 alt="penich beach">
-                            <div class="carousel-text">
-                                <p class="text-center subtext">Enjoy your place in the sun</p>
-                                <h1 class="text-center text">The Hideout Portugal</h1>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/aryane-diaz-wAnTkBqHG30-unsplash.jpg"
-                                class="d-block w-100 carousel-pictures" alt="penich beach">
+
                             <div class="carousel-text">
                                 <p class="text-center subtext">Enjoy your place in the sun</p>
                                 <h1 class="text-center text">The Hideout Portugal</h1>
@@ -81,11 +74,12 @@
     <div class="container-fluid about-section">
         <div class="row about">
             <div class="col-sm-6">
-                <h3 class="about-title">The HideOut Portugal</h3>
+                <h3 class="title-about">The HideOut Portugal</h3>
             </div>
-            <div class="col-sm-6 text-left">
+            <div class="col-sm-6 text-about">
                 <p>Welcome to The Hideout Portugal, a place designed for you and your family!</p>
-                <p>The Hideout Portugal is situated one hour north of Lisbon on the Costa de Prata (Silvercoast) near
+                <p>The Hideout Portugal is situated one hour north of Lisbon on the Costa de Prata (Silvercoast)
+                    near
                     Sao Martinho do Porto and within walking distance to its unique bay.</p>
                 <p>São Martinho do Porto, a natural shell shaped bay,
                     unique in Portugal, is the ideal place for a quiet holiday with access to sport activities in
@@ -108,14 +102,11 @@
         </div>
     </div>
     <!-- Portugal Pictures container--  -->
-    <div class="container section-three">
+    <div class="container-fluid section-three">
         <div class="row pictures d-flex flex-row">
             <div class="col- col-sm- photo-container">
 
                 <h2 class="text-left title-img">Portugal is waiting for you</h2>
-
-                <img class="photos hover-scale" src="./images/thumbnail.jpg" class="photos" alt="penich beach"
-                    alt="penich beach">
 
                 <img class="photos hover-scale" src="./images/christoffer-engstrom-eVb3HwIVnw0-unsplash.jpg"
                     alt="penich beach">
@@ -126,6 +117,8 @@
                 <img class="photos hover-scale" src="./images/peniche.jpg" alt="penich beach">
 
                 <img class="photos hover-scale" src="./images/photo-1503075131240-fe4b3a7fa473.jpeg" alt="penich beach">
+                <img class="photos hover-scale" src="./images/pexels-elle-hughes-1549178.jpg" class="photos"
+                    alt="penich beach" alt="penich beach">
             </div>
         </div>
     </div>
